deployment/k3d/manifest/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices-net: "true"
        io.kompose.service: auth-service
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://discovery-service:8081/eureka
            - name: SPRING_APPLICATION_NAME
              value: AuthServer
            - name: SPRING_DATASOURCE_PASSWORD
              value: password
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgres:5438/taskmanager
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: auth-service:latest
          name: authserver
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8430
          resources: {}
      restartPolicy: Always
status: {}
