deployment/k3d/manifest/discovery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery-service
  name: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices-net: "true"
        io.kompose.service: discovery-service
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: discovery-service:latest
          name: discoveryserver
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
