deployment/k3d/manifest/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices-net: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://discovery-service:8081/eureka
            - name: SPRING_APPLICATION_NAME
              value: gateway
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: gateway:latest
          name: gateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5920
          resources: {}
      restartPolicy: Always
status: {}
