deployment/k3d/manifest/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices-net: "true"
        io.kompose.service: notification-service
    spec:
      containers:
        - env:
            - name: SPRING_APPLICATION_NAME
              value: NotificationService
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: SPRING_RABBITMQ_HOST
              value: rabbitmq
            - name: SPRING_RABBITMQ_PASSWORD
              value: guest
            - name: SPRING_RABBITMQ_PORT
              value: "5672"
            - name: SPRING_RABBITMQ_QUEUE
              value: notifications.queue
            - name: SPRING_RABBITMQ_USERNAME
              value: guest
            - name: SPRING_RABBITMQ_VIRTUAL_HOST
              value: /
          image: notification-service:latest
          name: notificationservice
          imagePullPolicy: IfNotPresent
          resources: {}
      restartPolicy: Always
status: {}
