deployment/k3d/manifest/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "8430"
      port: 8430
      targetPort: 8430
  selector:
    io.kompose.service: auth-service
status:
  loadBalancer: {}
