deployment/k3d/manifest/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - name: "5920"
      port: 5920
      targetPort: 5920
  selector:
    io.kompose.service: gateway
status:
  loadBalancer: {}
