deployment/k3d/manifest/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
    - name: "5438"
      port: 5438
      targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
