deployment/k3d/manifest/microservices-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: microservices-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/microservices-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/microservices-net: "true"
